# AxleCore

./: .gitignore  CMakeLists.txt  CMakePresets.json  UIFix.yml  modelmgmt.md
cmake/: Common.cmake  Dependencies.cmake
cmake/Modules/: Compiler.cmake  Platform.cmake
cmake/Toolchains/: emscripten.toolchain.cmake
examples/: CMakeLists.txt
examples/Anime Shader File_blend/glTF/: Anime Shader File.gltf
examples/hellowindow/: CMakeLists.txt  HelloGLWindowX11.cpp  HelloWindow.cpp
examples/hellowindow_girl/: CMakeLists.txt  HelloWindowGirl.cpp
examples/hellowindow_win32/: CMakeLists.txt  HelloDX11WindowWin32.cpp
examples/hellowindow_win32GL/: CMakeLists.txt  HelloGLWindowWin32.cpp
examples/hellowindow_win32dx11/: HelloDX11WindowWin32.cpp
examples/hellowindow_x11/: CMakeLists.txt  HelloGLWindowX11.cpp
examples/hellowindow_x11GL/: HelloGLWindowX11.cpp
include/axle/assets/: AX_AssetAssimpDefs.hpp  AX_AssetGpu.hpp  AX_AssetImporter.hpp  AX_AssetSTLAssimpFileImporter.hpp
include/axle/audio/: AX_AudioParams.hpp  AX_AudioUtils.hpp
include/axle/audio/AL/: AX_ALAudioBuffer.hpp  AX_ALAudioContext.hpp  AX_ALAudioListener.hpp  AX_ALAudioPlayer.hpp  AX_ALAudioSource.hpp  AX_ALAudioStream.hpp  AX_ALExtensions.hpp  AX_ALIAudioPlayer.hpp
include/axle/audio/cmd/: AX_IAudioBackend.hpp
include/axle/audio/data/: AX_AudioOGG.hpp  AX_AudioWAV.hpp
include/axle/core/: AX_GameLoop.hpp
include/axle/core/alloc/: AX_DebugAllocator.hpp  AX_FrameAllocator.hpp  AX_LinearAllocator.hpp  AX_PoolAllocator.hpp
include/axle/core/app/: AX_Application.hpp  AX_ApplicationWin32.hpp  AX_ApplicationX11.hpp  AX_IApplication.hpp
include/axle/core/concurrency/: AX_TaskQueue.hpp  AX_ThreadCycler.hpp
include/axle/core/ctx/: AX_IRenderContext.hpp
include/axle/core/window/: AX_IWindow.hpp  AX_WindowWin32.hpp
include/axle/data/: AX_DataDeserializer.hpp  AX_DataEndianness.hpp  AX_DataSerializer.hpp  AX_DataStream.hpp  AX_DataStreamImplBuffer.hpp  AX_DataStreamImplFile.hpp  AX_DataTemplates.hpp  AX_IDataStream.hpp  AX_LittleEndian.hpp
include/axle/graphics/: AX_Graphics.hpp  AX_GraphicsParams.hpp  AX_GraphicsTypes.hpp
include/axle/graphics/cmd/: AX_Commands.hpp  AX_GraphicsCommand.hpp  AX_ICommandList.hpp  AX_IGraphicsBackend.hpp  AX_PipelineManager.hpp
include/axle/graphics/ctx/: AX_IRenderContext.hpp
include/axle/graphics/image/: AX_ImageBRDFLUT.hpp  AX_ImageLoader.hpp
include/axle/graphics/layer/: AX_RenderItemBuilder.hpp  AX_RenderLayer.hpp  AX_RenderProcedure.hpp
include/axle/graphics/rendering/: AX_RenderBatch.hpp  AX_RenderItemBuilder.hpp  AX_RenderLayer.hpp  AX_RenderProcedure.hpp  AX_RenderProcedureShader.hpp  AX_RenderResources.hpp
include/axle/graphics/scene/: AX_Camera.hpp  AX_IComponent.hpp  AX_Instantiator.hpp  AX_Model.hpp  AX_ModelInstance.hpp  AX_ModelManager.hpp  AX_NodeInstance.hpp  AX_SWFrustumCulling.hpp  AX_Scene.hpp  AX_Scene2D.hpp
include/axle/graphics/scene2D/: AX_Scene2D.hpp
include/axle/graphics/text/: AX_BitmapFont.hpp  AX_BitmapFontDrawer.hpp
include/axle/tick/: AX_Executor.hpp  AX_ITickAdapter.hpp
include/axle/utils/: AX_Coordination.hpp  AX_Expected.hpp  AX_MagicPool.hpp  AX_ResTimer.hpp  AX_Span.hpp  AX_Types.hpp  AX_UUID.hpp  AX_Universal.hpp
shaders/: cube.slang  girl.slang
shaders/engine/: transform.slang
sponza/: compress.py
src/: AX_PCH.hpp
src/assets/: AX_AssetGpu.cpp  AX_AssetImporter.cpp  AX_AssetSTLAssimpFileImporter.cpp
src/audio/: AX_AudioUtils.cpp
src/audio/AL/: AX_ALAudioBuffer.cpp  AX_ALAudioContext.cpp  AX_ALAudioListener.cpp  AX_ALAudioPlayer.cpp  AX_ALAudioSource.cpp
src/audio/AL/buffer/: AX_ALAudioBuffer.cpp  AX_ALAudioBufferPlayer.cpp  AX_ALAudioBufferSource.cpp
src/audio/AL/stream/: AX_ALAudioStreamVorbis.cpp  AX_ALAudioStreamVorbisPlayer.cpp  AX_ALAudioStreamVorbisSource.cpp
src/audio/cmd/AL/: AX_ALAudioBackend.cpp
src/audio/data/: AX_AudioOGG.cpp  AX_AudioWAV.cpp
src/core/: AX_Gameloop.cpp
src/core/alloc/: AX_DebugAllocator.cpp  AX_FrameAllocator.cpp  AX_LinearAllocator.cpp  AX_PoolAllocator.cpp
src/core/app/: AX_Application.cpp  AX_ApplicationWin32.cpp  AX_ApplicationX11.cpp  AX_IApplication.cpp
src/core/concurrency/: AX_TaskQueue.cpp  AX_ThreadContextGfx.cpp  AX_ThreadCycler.cpp
src/core/ctx/DX11/: AX_DX11RenderContextWin32.cpp  AX_RenderContextDX11Win32.cpp
src/core/ctx/GL/: AX_GLRenderContext.cpp  AX_GLRenderContextWin32.cpp  AX_GLRenderContextX11.cpp  AX_RenderContextGLWin32.cpp  AX_RenderContextGLX11.cpp  AX_RenderContextWin32.cpp
src/core/window/: AX_IWindow.cpp  AX_WindowWin32.cpp  AX_WindowX11.cpp
src/data/: AX_DataDeserializer.cpp  AX_DataSerializer.cpp  AX_DataStreamImplBuffer.cpp  AX_DataStreamImplFile.cpp  AX_DataTemplates.cpp  AX_LittleEndian.cpp
src/graphics/: AX_GraphicsParams.cpp
src/graphics/base/texture/: AX_Texture.cpp  AX_TextureASTC.cpp  AX_TextureBRDFLUT.cpp
src/graphics/cmd/: AX_Graphics.cpp  AX_GraphicsCommand.cpp  AX_ICommandList.cpp  AX_PipelineManager.cpp
src/graphics/cmd/GL/: AX_GLCommandList.cpp  AX_GLGraphicsBackend.cpp  AX_GSGLViewCommands.cpp
src/graphics/ctx/DX11/: AX_RenderContextDX11Win32.cpp
src/graphics/image/: AX_ImageBRDFLUT.cpp  AX_ImageLoader.cpp
src/graphics/layer/: AX_RenderItemBuilder.cpp  AX_RenderLayer.cpp  AX_RenderProcedure.cpp
src/graphics/rendering/: AX_RenderBatch.cpp  AX_RenderItemBuilder.cpp  AX_RenderLayer.cpp  AX_RenderProcedure.cpp  AX_RenderProcedureShader.cpp  AX_RenderResources.cpp
src/graphics/scene/: AX_Camera.cpp  AX_ModelInstance.cpp  AX_ModelManager.cpp  AX_NodeInstance.cpp  AX_SWFrustumCulling.cpp  AX_Scene.cpp
src/graphics/text/: AX_BitmapFont.cpp
src/tick/: AX_Executor.cpp
src/utils/: AX_Coordination.cpp  AX_ResTimer.cpp  AX_Universal.cpp
tools/atlasgen/: AtlasGenerator.cpp
tools/compression/: compress_glTF_astc.py  compress_glTF_bcn.py
tools/compression/BCnConv/: CMakeLists.txt  bcnconv.cpp
tools/compression/BCnConv/.cache/clangd/index/: Main.cpp.6C9EC0F80AB34CF6.idx
tools/embeddedshaders/: EmbeddedShaders.hpp  eAX_EmbeddedShaders.hpp  embed_shaders.py
(+33 files in other folders)
